try add .config/i3/*

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Ignore everything
 *
 
@@ -10,7 +11,10 @@
 !.bash_profile
 !.Xresources
 
-# etc...
+
+#!./.config/i3/
+
+
 
 # ...even if they are in subdirectories
 #!*/
