removed torrents from .config/transmission

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,17 @@
 !.config/i3
 !.config/mc
 !.config/cmus
+
+
+
+
+
 !.config/transmission
+.config/transmission/torrents
+
+
+
+
 !.config/vlc
 
 
